--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <!-- link css -->
 	<link rel="stylesheet" href="assets/css/style.css">
 
+    <!-- link Biblioteca Animaciones-->
+	<link rel="stylesheet" href="https://raw.github.com/daneden/animate.css/master/animate.css">
+
 </head>
 
 <body>
@@ -187,6 +190,9 @@
 
 </footer>                        
 <!-- End Footer -->    
+
+<script src="js/wow.min.js"></script>
+<script> new WOW().init();</script>
 
 </body>
 </html>
