--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
           <a href="pages/contacto.html" >¡Conocenos!</a>
         </div>
     </div>
-      <div class="Hero__Imagen">
-        <img src="assets/img/hero.png" width="500px" alt="">
-      </div>
+    <div class="Hero__Imagenes">
+      <img class="Planeta" src="assets/img/Planeta.png" width="200px" alt="">
+      <img class="Cohete" src="assets/img/rocket.png" width="400px" alt="">
+  </div>
   </div>
 </main>
 
@@ -80,6 +81,16 @@
     <p >Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh 
   euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, 
   quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea com</p>
+  </div>
+</section>
+
+<section class="TextoDinamico">
+  <div class="TextoDinamico__Subtitulo">
+    <h2 >Todo lo que necesitas para hacer tu negocio realidad</h2>
+  </div>
+  <div class="TextoDinamico__Parrafo">
+    <p >LEn Nuestro Café encontraras cursos, insunos, máquinas, accesorios y porsupuesto el mejor café, 
+      además todo lo que necesitas para tu negocio o emprendimiento.</p>
   </div>
 </section>
 
