--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 <main class="MainGrid">
   <div class="Hero">
     <div class="Hero__Titulo"> 
-      <h1>Innovation That Make Dreams Come True</h1>
+      <h1>Innovación más alla de este mundo</h1>
         <div class="Hero__Boton">
-          <a href="pages/contacto.html" >¡Conocenos!</a>
+          <a href="pages/contacto.html" >¡Despeguemos!</a>
         </div>
     </div>
     <div class="Hero__Imagenes">
@@ -70,27 +70,15 @@
 <!-- ======= Texto ======= -->
 
   <div class="Titulo">
-    <h2>Lorem ipsum dolor sit amet</h2>
+    <h2>Un partner estrategico de otra galaxia ☄️</h2>
   </div>
 
 <section class="TextoDinamico">
   <div class="TextoDinamico__Subtitulo">
-    <h2 >Lorem ipsum dolor sit ametr</h2>
+    <h2>Te ayudamos a alcanzar tu maximo potencial</h2>
   </div>
   <div class="TextoDinamico__Parrafo">
-    <p >Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh 
-  euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, 
-  quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea com</p>
-  </div>
-</section>
-
-<section class="TextoDinamico">
-  <div class="TextoDinamico__Subtitulo">
-    <h2 >Todo lo que necesitas para hacer tu negocio realidad</h2>
-  </div>
-  <div class="TextoDinamico__Parrafo">
-    <p >LEn Nuestro Café encontraras cursos, insunos, máquinas, accesorios y porsupuesto el mejor café, 
-      además todo lo que necesitas para tu negocio o emprendimiento.</p>
+    <p >Ayudamos a empresas a innovar en sus negocios a traves de la transformación digital. </p>
   </div>
 </section>
 
