--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <h2>Te ayudamos a alcanzar tu maximo potencial</h2>
   </div>
   <div class="TextoDinamico__Parrafo">
-    <p >Ayudamos a empresas a innovar en sus negocios a traves de la transformación digital. </p>
+    <p >Ayudamos a empresas a innovar en sus negocios a traves de la transformación digital. Poroto negro </p>
   </div>
 </section>
 
