--- a/index.html
+++ b/index.html
@@ -29,25 +29,18 @@
 <body>
 
 <!-- ======= Header ======= -->
-<header class="Navbar">
-
-  <!-- logo -->
+<header>
+  <img class="logo" href="index.html"><img src="assets/img/logo_horizontal.png" alt="Logo Cydonia" width="120">
   <nav>
-	<!-- <h3 id="logo">Cydonia</h3> -->
-    <a class="logo" href="index.html"><img src="assets/img/logo_horizontal.png" alt="Logo Cydonia" width="120"></a>
-  <!-- Fin Logo -->
-  
-  <!-- Inicio Nav-->
-
-      <ul class="navbar__List">
+      <ul class="nav__list">
         <li><a  href="index.html">Home</a></li>
         <li><a  href="pages/servicios.html">Servicios</a></li>
         <li><a  href="pages/proyectos.html">Proyectos</a></li>
         <li><a  href="pages/nosotros.html">Nosotros</a></li>
         <li><a  href="pages/contacto.html">Contacto</a></li>
       </ul>
-    </nav> 
-  <!-- Fin navbar -->
+  </nav> 
+<a  class="cta" href="#"><button>Contacto</button></a>
 </header>
 <!-- ======= End Header ======= -->
 
