--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -23,28 +23,19 @@
 </head>
 
 <body>
-<!-- ======= Header ======= -->
-
-<!-- Inicio Encabezado -->
-<header class="Navbar">
-
-  <!-- logo -->
-  <nav>
-	<!-- <h3 id="logo">Cydonia</h3> -->
-    <a class="logo" href="../index.html"><img src="../assets/img/logo_horizontal.png" alt="Logo Cydonia" width="120"></a>
-  <!-- Fin Logo -->
   
-  <!-- Inicio Nav-->
-
-  <ul class="navbar__List">
-    <li><a  href="../index.html">Home</a></li>
-    <li><a  href="./servicios.html">Servicios</a></li>
-    <li><a  href="./proyectos.html">Proyectos</a></li>
-    <li><a  href="./nosotros.html">Nosotros</a></li>
-    <li><a  href="./contacto.html">Contacto</a></li>
-  </ul>
-    </nav> 
-  <!-- Fin navbar -->
+<!-- ======= Header ======= -->
+<header>
+  <nav>
+    <img class="logo" href="index.html"><img src="../assets/img/logo_horizontal.png" alt="Logo Cydonia" width="120">
+      <ul class="nav__list">
+        <li><a  href="../index.html">Home</a></li>
+        <li><a  href="./servicios.html">Servicios</a></li>
+        <li><a  href="./proyectos.html">Proyectos</a></li>
+        <li><a class="active" href="./nosotros.html">Nosotros</a></li>
+        <li><a  class="cta" href="./contacto.html"><button>Contacto</button></a></li>
+      </ul>
+  </nav> 
 </header>
 <!-- ======= End Header ======= -->
 
