--- a/index.html
+++ b/index.html
@@ -30,17 +30,16 @@
 
 <!-- ======= Header ======= -->
 <header>
-  <img class="logo" href="index.html"><img src="assets/img/logo_horizontal.png" alt="Logo Cydonia" width="120">
   <nav>
+    <img class="logo" href="index.html"><img src="assets/img/logo_horizontal.png" alt="Logo Cydonia" width="120">
       <ul class="nav__list">
-        <li><a  href="index.html">Home</a></li>
+        <li><a  class="active" href="index.html">Home</a></li>
         <li><a  href="pages/servicios.html">Servicios</a></li>
         <li><a  href="pages/proyectos.html">Proyectos</a></li>
         <li><a  href="pages/nosotros.html">Nosotros</a></li>
-        <li><a  href="pages/contacto.html">Contacto</a></li>
+        <li><a  class="cta" href="pages/contacto.html"><button>Contacto</button></a></li>
       </ul>
   </nav> 
-<a  class="cta" href="#"><button>Contacto</button></a>
 </header>
 <!-- ======= End Header ======= -->
 
