--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <header id="header" class="sticky-top">
   <nav class="navbar navbar-expand-sm" id="navbar">
     <div class="container-fluid">
-        <a id="logo" class="navbar-brand" href="index.html"> <img src="assets/img/logo_horizontal.png" alt="Logo Cydonia" width="120"></a>
+        <a id="logo" class="navbar-brand" href="../index.html"> <img src="assets/img/logo_horizontal.png" alt="Logo Cydonia" width="120"></a>
 
         <button class="navbar-toggler" 
             type="button"   
