--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -100,34 +100,48 @@
 </section>
 
 <!-- ======= Footer ======= -->
-<footer class="footer">
-  <a href="../index.html"><img src="../assets/img/logo_horizontal.png" alt="Logo Cydonia" width="120"></a>
 
-<nav Class="MenuFooter">
-  <ul class="navbar__List">
-    <li><a  href="../index.html">Home</a></li>
-    <li><a  href="./servicios.html">Servicios</a></li>
-    <li><a  href="./proyectos.html">Proyectos</a></li>
-    <li><a  href="./nosotros.html">Nosotros</a></li>
-    <li><a  href="./contacto.html">Contacto</a></li>
-  </ul>
-</nav><!-- .navbar -->
+<footer class="py-4" id="footer">
+  <div class="container">
+    <div class="row">
+
+    <div class="col-3">
+      <a href="../index.html"><img src="../assets/img/logo_horizontal.png" alt="Logo Cydonia" width="120"></a>
+    </div>
+
+
+      <div class="col-3">
+        <h5>Menú</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="../index.html" class="nav-link p-0 text-muted">Home</a></li>
+          <li class="nav-item mb-2"><a href="./servicios.html" class="nav-link p-0 text-muted">Servicios</a></li>
+          <li class="nav-item mb-2"><a href="./proyectos.html" class="nav-link p-0 text-muted">Proyectos</a></li>
+          <li class="nav-item mb-2"><a href="./nosotros.html" class="nav-link p-0 text-muted">Nosotros</a></li>
+          <li class="nav-item mb-2"><a href="contacto.html" class="nav-link p-0 text-muted">AbouContacto</a></li>
+        </ul>
+      </div>
+
 
 <!-- ======= Capturador Email Footer ======= -->
-<div>
-  <p>¿Quieres estar al tanto de nuestras actualizaciones?</p>
-  <form action="" method="post">
-    <input type="email" name="email" placeholder="Ingresa tu Email"><input type="submit" value="Suscribete">
-  </form>
-</div>
-<br>
+      <div class="col-4 offset-1">
+        <form>
+          <h5>Suscribete a nuestro newsletter</h5>
+          <p>¿Quieres estar al tanto de nuestras actualizaciones?</p>
+          <div class="d-flex w-100 gap-2">
+            <label for="newsletter1" class="visually-hidden">Ingresa tu email</label>
+            <input id="newsletter1" type="text" class="form-control" placeholder="Correo Electronico">
+            <button class="btn btn-primary" type="button">Suscribete</button>
+          </div>
+        </form>
+      </div>
+    </div>
 
-<!-- ======= Copyright ======= -->
-<div>
-  &copy; Copyright <strong><span>Cydonia</span></strong>. Todos los derechos reservados.
-</div>
+    <!-- ======= Copyright ======= -->
+    <div class="d-flex justify-content-between py-4 my-4 border-top">
+      <p>© 2022 Cydonia SpA. Todos los derechos reservados.</p>
+    </div>
 
-</footer>                        
+</footer>                               
 <!-- End Footer -->    
 
 <!-- Scripts -->
