--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,600,600i,700,700i">
 	
   <!-- link css -->
-<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="assets/css/styles.css">
+
   
 
   <!-- Bootstrap CSS -->
