--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,600,600i,700,700i">
 	
   <!-- link css -->
-	<link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/styles.css">
 
     <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -51,7 +51,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="nav__list">
                 <li class="nav-item"><a  class="nav-link" href="../index.html">Home</a></li>
-                <li class="nav-item"><a  cclass="nav-link active" href="./servicios.html">Servicios</a></li>
+                <li class="nav-item"><a  class="nav-link active" href="./servicios.html">Servicios</a></li>
                 <li class="nav-item"><a  class="nav-link" href="./proyectos.html">Proyectos</a></li>
                 <li class="nav-item"><a  class="nav-link" href="./nosotros.html">Nosotros</a></li>
                 <li class="nav-item"><a  class="nav-link" href="./contacto.html"><button>Contacto</button></a></li>
