--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -62,42 +62,65 @@
 </header>
 <!-- ======= End Header ======= -->
 
-  <!-- ======= Servicios ======= -->
-<div class="Titulo">
-  <h2>Nuestros servicios</h2>
+<!-- ======= Servicios ======= -->
+
+<section >
+
+  <div class="Servicios" class="container">
+    <div class="row">
+
+      <div class="Titulo">
+        <h2>Nuestros servicios</h2>
+      </div>
+
+    <div class="col-3">
+      <div class="Card" style="width: 18rem;">
+        <img class= "Card__Img" src="assets/img/Desarrollo-Web.png" class="card-img-top" alt="Desarrollo_web">
+        <div class="card-body">
+          <h5 class="Card_Tittle" class="card-title">Desarrollo Web</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
+          <a href="#" class="btn btn-primary">Ver más</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-3">
+      <div class="Card" style="width: 18rem;">
+        <img class= "Card__Img" src="assets/img/Marketing-Digital.png" class="card-img-top" alt="Marketing_digital">
+        <div class="card-body">
+          <h5 class="Card_Tittle" class="card-title">Marketing Digital</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
+          <a href="#" class="btn btn-primary">Ver más</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-3">
+      <div class="Card" style="width: 18rem;">
+        <img class= "Card__Img" src="assets/img/Inteligencia-Comercial.png" class="card-img-top" alt="Inteligencia_comercial">
+        <div class="card-body">
+          <h5 class="Card_Tittle" class="card-title">Inteligencia Comercial</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
+          <a href="#" class="btn btn-primary">Ver más</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-3">
+      <div class="Card" style="width: 18rem;">
+        <img class= "Card__Img" src="assets/img/Consultorias.png" class="card-img-top" alt="Consultorias">
+        <div class="card-body">
+          <h5 class="Card_Tittle" class="card-title">Consultorias</h5>
+          <p class="Card_Description" class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
+          <a href="#" class="btn btn-primary">Ver más</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </div>
-
-<section class="Servicios">
-  
-  <div class="Card">
-    <img class= "Card__Img" src="../assets/img/Desarrollo-Web.png" alt="">
-    <h2 Class="Card_Tittle">Desarrollo Web</h2>
-    <p class="Card_Description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
-    <h3 class="Boton"><a href="desarrollo_web.html"></a>Ver más</h3><br>
-  </div>
-
-  <div class="Card">
-    <img class= "Card__Img" src="../assets/img/Marketing-Digital.png" alt="">
-    <h2 Class="Card_Tittle">Marketing Digital</h2>
-    <p class="Card_Description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
-    <h3 class="Boton"><a href="marketing_digital.html"></a>Ver más</h3><br>
-  </div>
-
-  <div class="Card">
-    <img class= "Card__Img" src="../assets/img/Inteligencia-Comercial.png" alt="">
-    <h2 Class="Card_Tittle">Inteligencia Comercial</h2>
-    <p class="Card_Description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
-    <h3 class="Boton"><a href="inteligencia_comercial.html"></a>Ver más</h3><br>
-  </div>
-
-  <div class="Card">
-    <img class= "Card__Img" src="../assets/img/Consultorias.png"  alt="">
-    <h2 Class="Card_Tittle">Consultorias</h2>
-    <p class="Card_Description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
-    <h3 class="Boton"><a href="consultorias.html"></a>Ver más</h3><br>
-  </div>
-
 </section>
+
 
 <!-- ======= Footer ======= -->
 
