--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 
   <title>Cydonia - Transformación Digital</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta name="description" content="Consultoria especializada en transformacion digital" >
+  <meta name="keywords" content="Innovacion, transformacion digital, marketing digital">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
