--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Cydonia - Nuestros Proyectos</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Cydonia - Nuestros Viajes/title>
+  <meta name="description" content="Acompañamos a negocios a impulsar sus marcas hasta el espacio, ¡Conocelos!" >
+  <meta name="keywords" content="Innovacion, transformacion digital, marketing digital">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
