--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Cydonia - Contactanos</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Cydonia - Viaja Con nosotros</title>
+  <meta name="description" content="No detengas tu viaje, llamanos y te ayduaremos a llegar mas lejos" >
+  <meta name="keywords" content="Innovacion, transformacion digital, marketing digital">
 
   <!-- Favicons -->
   <link href="../assets/img/favicon.png" rel="icon">
