--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Cydonia - Conocenos</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Cydonia - The Knights of Cydonia</title>
+  <meta name="description" content="Conoce a los responsables de la magia" >
+  <meta name="keywords" content="Innovacion, transformacion digital, marketing digital">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
