--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Cydonia - Nuestros Servicios</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Cydonia - Servicios de otro planeta</title>
+  <meta name="description" content="Despega tu negocio hasta las estrellas con nuestros servicios de trnasformacion digital" >
+  <meta name="keywords" content="Innovacion, transformacion digital, marketing digital">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
